[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/fonts/thin_pixelated.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/fonts/pixelated.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://interfaces/on_daylight_menus/scripts/subscenes/compost.gd" type="Script" id=3]
[ext_resource path="res://resources/tres/waste_manager.tres" type="Resource" id=4]

[sub_resource type="DynamicFont" id=1]
size = 51
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 37
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 13
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 38
extra_spacing_top = 10
extra_spacing_bottom = 10
font_data = ExtResource( 2 )

[node name="Compost" type="Control"]
anchor_right = 0.53
anchor_bottom = 0.557
margin_right = 0.0199585
margin_bottom = 0.223969
script = ExtResource( 3 )
waste_handler = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 10

[node name="MgmtStrat" type="Label" parent="VBoxContainer"]
margin_right = 723.0
margin_bottom = 47.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "Compost"
align = 1
valign = 1
autowrap = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 57.0
margin_right = 723.0
margin_bottom = 427.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 30

[node name="Compost" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_right = 346.0
margin_bottom = 370.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 30

[node name="Waste" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/Compost"]
margin_right = 346.0
margin_bottom = 160.0
rect_pivot_offset = Vector2( -345, -102 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20

[node name="Waste" type="ColorRect" parent="VBoxContainer/HBoxContainer/Compost/Waste"]
margin_right = 346.0
margin_bottom = 70.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.262745, 0.262745, 0.262745, 1 )

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/Compost/Waste/Waste"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0.996078, 0.972549, 0.972549, 1 )
custom_fonts/font = SubResource( 6 )
text = "Inedible Waste"
align = 1
valign = 1

[node name="Amount" type="ColorRect" parent="VBoxContainer/HBoxContainer/Compost/Waste"]
margin_top = 90.0
margin_right = 346.0
margin_bottom = 160.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="InedibleWasteAmnt" type="Label" parent="VBoxContainer/HBoxContainer/Compost/Waste/Amount"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 7 )
text = "Waste Amount"
align = 1
valign = 1

[node name="Strategy" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/Compost"]
margin_top = 190.0
margin_right = 346.0
margin_bottom = 370.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.12
custom_constants/separation = 20

[node name="Compost" type="ColorRect" parent="VBoxContainer/HBoxContainer/Compost/Strategy"]
margin_right = 346.0
margin_bottom = 68.0
size_flags_vertical = 3
size_flags_stretch_ratio = 1.25
color = Color( 0.262745, 0.262745, 0.262745, 1 )

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/Compost/Strategy/Compost"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = SubResource( 6 )
text = "Compost"
align = 1
valign = 1
autowrap = true

[node name="Amount" type="ColorRect" parent="VBoxContainer/HBoxContainer/Compost/Strategy"]
margin_top = 88.0
margin_right = 346.0
margin_bottom = 143.0
size_flags_vertical = 3

[node name="CompostAmnt" type="Label" parent="VBoxContainer/HBoxContainer/Compost/Strategy/Amount"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 7 )
text = "Compost Amount"
align = 1
valign = 1

[node name="HSlider" type="HSlider" parent="VBoxContainer/HBoxContainer/Compost/Strategy"]
margin_top = 163.0
margin_right = 346.0
margin_bottom = 179.0

[node name="Text" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 376.0
margin_right = 723.0
margin_bottom = 370.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 25

[node name="Text Info" type="ColorRect" parent="VBoxContainer/HBoxContainer/Text"]
margin_right = 347.0
margin_bottom = 284.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.262745, 0.262745, 0.262745, 1 )

[node name="Info" type="Label" parent="VBoxContainer/HBoxContainer/Text/Text Info"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_right = -30.0
custom_fonts/font = SubResource( 4 )
text = "TIP:
Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. "
align = 3
valign = 1
autowrap = true

[node name="ManagementStrategy2" type="Button" parent="VBoxContainer/HBoxContainer/Text"]
margin_top = 309.0
margin_right = 347.0
margin_bottom = 370.0
custom_fonts/font = SubResource( 5 )
text = "Send"

[connection signal="value_changed" from="VBoxContainer/HBoxContainer/Compost/Strategy/HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Text/ManagementStrategy2" to="." method="_on_sendButton_pressed"]
